// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render a Checkbox 1`] = `
<div
  className="checkbox tc-toggle checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      autoFocus={undefined}
      checked={false}
      disabled={false}
      id="id"
      onBlur={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render a Toggle 1`] = `
<div
  className="checkbox tc-toggle switch checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      autoFocus={undefined}
      checked={false}
      disabled={false}
      id="id"
      onBlur={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render a Toggle with label 1`] = `
<div
  className="checkbox tc-toggle switch checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      autoFocus={undefined}
      checked={false}
      disabled={false}
      id="id"
      onBlur={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      some label
    </span>
  </label>
</div>
`;

exports[`Toggle should render a autoFocused Toggle 1`] = `
<div
  className="checkbox tc-toggle switch checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      autoFocus={true}
      checked={false}
      disabled={false}
      id="id"
      onBlur={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render a checked Toggle 1`] = `
<div
  className="checkbox tc-toggle switch checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      autoFocus={undefined}
      checked={true}
      disabled={false}
      id="id"
      onBlur={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      
    </span>
  </label>
</div>
`;

exports[`Toggle should render a disabled Toggle 1`] = `
<div
  className="checkbox tc-toggle switch checkbox"
>
  <label
    htmlFor="id"
  >
    <input
      autoFocus={undefined}
      checked={false}
      disabled={true}
      id="id"
      onBlur={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span>
      
    </span>
  </label>
</div>
`;
